<resources>
    <string name="chat_online_status_title_format">%s%s</string>
    <string name="chat_online_status_text">(online)</string>
    <string name="chat_offline_status_text">(offline)</string>
    <string name="cancel">Cancel</string>
    <string name="chat_dialog_sure">Sure</string>
    <string name="chat_complete_text">Complete</string>
    <string name="chat_pressed_to_speak">Hold to Talk</string>
    <string name="chat_record_failed">Whoops! Please retry.</string>
    <string name="chat_message_send_hint">Sending to %s</string>
    <string name="chat_message_send_error">Message not sent</string>
    <string name="chat_message_fetch_error">Message not received</string>
    <string name="chat_message_revoke_error">Message not recalled</string>
    <string name="chat_message_delete_error">Message not deleted</string>
    <string name="chat_message_audio_to_short">Message too short</string>
    <string name="chat_message_revoke_content">Message recalled</string>
    <string name="chat_message_revoke_over_time">Recall time expired</string>
    <string name="chat_message_revoked">Message recalled</string>
    <string name="chat_message_re_edit">Edit</string>
    <string name="chat_message_voice_in"> Release to send</string>
    <string name="chat_message_signal">Pin</string>
    <string name="chat_message_history">Search Chat History</string>
    <string name="chat_message_open_message_notice">Notification</string>
    <string name="chat_message_set_top">Sticky on Top</string>
    <string name="chat_message_set_ai_pin">PIN</string>
    <string name="chat_message_add_to_black_list">Block</string>
    <string name="chat_message_delete">Delete</string>
    <string name="chat_setting">Settings</string>
    <string name="chat_bot_sub_session_title">Topics</string>
    <string name="chat_bot_sub_session_search_hint">Search sub-session name</string>
    <string name="chat_bot_sub_session_empty">No topics yet. Send a message to start one.</string>
    <string name="chat_bot_sub_session_search_empty">No related sub-sessions found</string>
    <string name="chat_bot_sub_session_no_message">No messages</string>
    <string name="chat_bot_sub_session_untitled">New topic</string>
    <string name="chat_bot_sub_session_new">New</string>
    <string name="chat_bot_sub_session_create_conversation">Create conversation</string>
    <string name="chat_bot_sub_session_rename">Rename</string>
    <string name="chat_bot_sub_session_rename_conversation">Rename conversation</string>
    <string name="chat_bot_sub_session_delete">Delete</string>
    <string name="chat_bot_sub_session_save">Save</string>
    <string name="chat_bot_sub_session_setting">Settings</string>
    <string name="chat_bot_sub_session_delete_confirm">Delete this topic?</string>
    <string name="chat_bot_sub_session_delete_title">Topic deletion</string>
    <string name="chat_bot_sub_session_delete_topic">Delete topic "%1$s"?</string>
    <string name="chat_bot_sub_session_input_name">Enter topic name</string>
    <string name="chat_bot_sub_session_load_error">Failed to load topics</string>
    <string name="chat_bot_sub_session_load_failed">Load failed</string>
    <string name="chat_bot_sub_session_load_more_failed">Data request failed. Please try again later</string>
    <string name="chat_bot_sub_session_retry">Tap to retry</string>
    <string name="chat_bot_sub_session_offline_create">You are offline. Cannot create a conversation now</string>
    <string name="chat_bot_sub_session_rename_failed">Failed to rename. Please try again</string>
    <string name="chat_bot_sub_session_delete_failed">Failed to delete. Please try again</string>
    <string name="chat_bot_sub_session_removed">This topic was removed</string>
    <string name="chat_bot_sub_session_guide">Start chatting with %1$s</string>
    <string name="chat_bot_sub_session_summary_image">[Photo]</string>
    <string name="chat_bot_sub_session_summary_file">[File]</string>
    <string name="chat_bot_sub_session_summary_file_with_name">[File] %1$s</string>
    <string name="chat_bot_sub_session_summary_audio">[Voice]</string>
    <string name="chat_bot_sub_session_summary_video">[Video]</string>
    <string name="chat_bot_sub_session_summary_message">[Message]</string>
    <string name="chat_bot_sub_session_auto_title_image">Photo</string>
    <string name="chat_bot_sub_session_auto_title_file">File</string>
    <string name="chat_bot_sub_session_auto_title_audio">Voice</string>
    <string name="chat_bot_sub_session_auto_title_video">Video</string>
    <string name="chat_bot_sub_session_auto_title_location">Location</string>
    <string name="chat_bot_sub_session_auto_title_message">Message</string>
    <string name="chat_read_status">Read Status</string>
    <string name="chat_read_with_num">Read by（%d）</string>
    <string name="chat_unread_with_num">Unread by（%d）</string>
    <string name="chat_all_user_have_read">All Read</string>
    <string name="chat_all_user_have_unread">Unread by all members</string>
    <string name="chat_message_ait_contact_title">Select Notification</string>
    <string name="chat_message_ait_contact_search_hint">Search members</string>
    <string name="chat_message_rich_title_hint">Enter title</string>
    <string name="chat_message_rich_body_hint">Enter content</string>
    <string name="chat_no_permission"> No permission</string>
    <string name="chat_server_request_fail">Failure</string>
    <string name="chat_server_request_success">Success</string>
    <string name="chat_message_take_photo">Photo</string>
    <string name="chat_message_take_video">Video</string>
    <string name="chat_message_pick_image">Album</string>
    <string name="chat_message_copy_image">Photos not found</string>
    <string name="chat_message_image_save">Saved </string>
    <string name="chat_message_video_save">Saved </string>
    <string name="chat_message_image_save_fail">Photo not saved</string>
    <string name="chat_message_video_save_fail">Video not saved</string>
    <string name="chat_message_video_download_fail">Video not downloaded</string>
    <string name="chat_message_video_send_fail">Video not sent</string>
    <string name="chat_message_video_fail_try_again">Video not played. Please retry</string>
    <string name="chat_message_video_time">%02d:%02d</string>
    <string name="chat_message_send">Send</string>
    <string name="chat_message_video_error">Video not played</string>
    <string name="chat_message_more_shoot">Camera</string>
    <string name="chat_message_camera_unavailable">Camera unavailable</string>
    <string name="chat_message_location">Location</string>
    <string name="chat_message_file">File</string>
    <string name="chat_message_video_call">Call</string>
    <string name="chat_message_video_call_action">Video Call</string>
    <string name="chat_message_audio_call_action">Voice Call</string>
    <string name="chat_message_translate_action">Translate</string>
    <string name="chat_message_ai_helper_action">AI Helper</string>
    <string name="chat_message_audio_call_text">[Voice Call]</string>
    <string name="chat_message_video_call_text">[Video Call]</string>
    <string name="chat_message_call_canceled">Canceled</string>
    <string name="chat_message_in_call_canceled">Canceled</string>
    <string name="chat_message_in_call_canceled_self">Canceled</string>
    <string name="chat_message_call_refused">Declined</string>
    <string name="chat_message_call_refused_self">Declined</string>
    <string name="chat_message_call_timeout">Time Out</string>
    <string name="chat_message_call_busy">Line busy</string>
    <string name="chat_message_call_busy_self">Line busy</string>
    <string name="chat_message_call_completed">Duration: &#160;&#160; %s</string>
    <string name="chat_message_multi_record">Chat History</string>
    <string name="chat_message_multi_record_title">Message from %s</string>
    <string name="chat_message_multi_record_content">%s：%s</string>
    <string name="chat_message_action_copy">Copy</string>
    <string name="chat_message_action_reply">Reply</string>
    <string name="chat_message_action_emoji_reaction">表情回复</string>
    <string name="chat_message_action_transmit">Forward</string>
    <string name="chat_message_action_voice_play_on">Turn on Speaker</string>
    <string name="chat_message_action_voice_play_off">Turn off Speaker</string>
    <string name="chat_message_action_pin">Pin</string>
    <string name="chat_message_action_pin_cancel">Unpin</string>
    <string name="chat_message_action_multi_select">Multi-select</string>
    <string name="chat_message_action_delete">Delete</string>
    <string name="chat_message_action_recall">Recall</string>
    <string name="chat_message_positive_recall">Yes</string>
    <string name="chat_message_action_collection">Favorite</string>
    <string name="chat_message_action_top">Top</string>
    <string name="chat_message_action_cancel_top">Remove from top</string>
    <string name="chat_team_add_top_message">Added top message</string>
    <string name="chat_team_remove_top_message">Removed top message</string>
    <string name="chat_message_action_tel">Call</string>
    <string name="chat_message_action_location">Locate to chat</string>
    <string name="chat_message_action_cancel">Cancel</string>
    <string name="chat_message_action_revoke_this_message">Confirm message recall?</string>
    <string name="chat_message_action_delete_this_message">Confirm message deletion?</string>
    <string name="chat_message_removed_tip">The message was removed.</string>
    <string name="chat_message_reply_someone">Reply to %s</string>
    <string name="chat_message_action_copy_success">Copied!</string>
    <string name="chat_enter_team">%s joined group</string>
    <string name="chat_exit_team">%s left group</string>
    <string name="chat_team_allow_anyone_join">Group join approval has been disabled</string>
    <string name="chat_team_need_authentication">Group join approval has been enabled</string>
    <string name="chat_team_admin_invite">Admin invitation</string>
    <string name="chat_invite">invite</string>
    <string name="chat_join_team">Join group</string>
    <string name="chat_join_discuss_team">Join group</string>
    <string name="chat_removed_team">Removed from the group</string>
    <string name="chat_removed_discuss_team">Removed from the group</string>
    <string name="chat_left_team">Left Group</string>
    <string name="chat_left_discuss_team">Left Group</string>
    <string name="chat_dismiss_team">dissolved Group</string>
    <string name="chat_name_update">Named as "%s"</string>
    <string name="chat_team_extension_update">Group Extension update as </string>
    <string name="chat_team_introduce_update">Group introduction update as</string>
    <string name="chat_team_notice_update">Modified group announcement</string>
    <string name="chat_team_accept_ones_invent">accepted invitation from %s</string>
    <string name="chat_team_verify_update">permissions updated to</string>
    <string name="chat_message_forward_to_team">Forward to group</string>
    <string name="chat_message_forward_to_person">Forward to friend</string>
    <string name="message_search_title">Search Chat History</string>
    <string name="message_search_hint">Search Chat History</string>
    <string name="message_search_empty">Empty</string>
    <string name="chat_network_error_tip">No Network</string>
    <string name="chat_pin_title">Pin</string>
    <string name="chat_pin_empty_tips">Empty</string>
    <string name="chat_collection_title">Favorites</string>
    <string name="chat_collection_empty_tips">No favorite messages</string>
    <string name="chat_ai_translate">AI</string>
    <string name="chat_use_ai_translate">To use</string>
    <string name="chat_ai_translate_tips">Translate to…</string>
    <string name="chat_ai_translate_target_language">Language</string>
</resources>