<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/dimen_12_dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white_reduce_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_13"
            android:textColor="@color/color_333333"
            android:gravity="center_horizontal"
            android:text="@string/chat_message_forward_to_team"
            android:paddingVertical="@dimen/dimen_12_dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1_dp"
            android:background="@color/color_f5f8fc" />

        <TextView
            android:id="@+id/tv_p2p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/color_333333"
            android:text="@string/chat_message_forward_to_person"
            android:gravity="center_horizontal"
            android:paddingVertical="@dimen/dimen_12_dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_12_dp"
        android:background="@color/title_transfer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white_reduce_bg"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/color_333333"
            android:gravity="center_horizontal"
            android:text="@string/cancel"
            android:paddingVertical="@dimen/dimen_12_dp" />

    </LinearLayout>


</LinearLayout>