<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/collection_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <com.netease.yunxin.kit.common.ui.widgets.BackTitleBar
            android:id="@+id/collection_title_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_52_dp"
            app:titleText="@string/chat_collection_title"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/collection_split_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1_dp"
            android:alpha="0.6"
            android:background="@color/color_e9eff5"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collection_body_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/collection_network_error_tv"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/color_fee3e6"
            android:gravity="center"
            android:text="@string/chat_network_error_tip"
            android:textColor="@color/color_fc596a"
            android:textSize="14sp"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/collection_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/dimen_16_dp"/>

            <LinearLayout android:id="@+id/collection_empty_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView android:id="@+id/empty_iv"
                    android:layout_width="@dimen/dimen_118_dp"
                    android:layout_marginTop="@dimen/dimen_150_dp"
                    android:layout_height="@dimen/dimen_96_dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_chat_empty"/>

                <TextView android:id="@+id/empty_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dimen_16_dp"
                    android:text="@string/chat_collection_empty_tips"/>

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>