<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.netease.yunxin.kit.common.ui.widgets.BackTitleBar
        android:id="@+id/message_search_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_46_dp"
        app:titleText="@string/message_search_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:background="@drawable/bg_message_search_et"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="5dp"
        android:hint="@string/message_search_hint"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/color_333333"
        android:textColorHint="@color/color_666666"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_search_title_bar"
        tools:ignore="SpUsage"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/ivClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_clear"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/etSearch"
        app:layout_constraintEnd_toEndOf="@id/etSearch"
        app:layout_constraintTop_toTopOf="@id/etSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSearch" />

    <LinearLayout android:id="@+id/empty_ll"
        android:layout_width="@dimen/dimen_100_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_55_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSearch"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivEmpty"
            android:layout_width="@dimen/dimen_74_dp"
            android:layout_height="@dimen/dimen_74_dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_list_empty"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_search_empty"
            android:textColor="@color/color_666666"
            android:layout_marginTop="@dimen/dimen_6_dp"
            android:gravity="center"
            android:textSize="@dimen/text_size_14"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>